--- a/.github/workflows/knit-readme.yml
+++ b/.github/workflows/knit-readme.yml
@@ -1,29 +1,30 @@
 name: Knit README
 on:
   push:
-    paths:
-      - README.Rmd
-  workflow_dispatch:      # adds the “Run workflow” button
+    paths: [README.Rmd]   # run when the Rmd changes
+  workflow_dispatch:      # allow manual runs
 
 permissions:
-  contents: write         # allows committing README.md
+  contents: write
 
 jobs:
   knit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
       - uses: r-lib/actions/setup-r@v2
-      - name: Install deps used in README
+      - uses: r-lib/actions/setup-pandoc@v2   # <-- this installs Pandoc
+      - name: Install R packages used in README
         run: |
           R -q -e 'install.packages(c("rmarkdown","knitr"))'
           R -q -e 'if (!requireNamespace("dagitty", quietly=TRUE)) install.packages("dagitty")'
       - name: Render README.Rmd → README.md
         run: |
-          R -q -e 'rmarkdown::render("README.Rmd", output_format="github_document", output_file="README.md", quiet=TRUE)'
-      - name: Commit README.md (if changed)
+          R -q -e 'rmarkdown::render("README.Rmd",
+                                     output_format="github_document",
+                                     output_file="README.md",
+                                     quiet=TRUE)'
+      - name: Commit README.md
         uses: EndBug/add-and-commit@v9
         with:
           add: README.md
