--- a/.github/workflows/knit-readme.yml
+++ b/.github/workflows/knit-readme.yml
@@ -1,8 +1,8 @@
 name: Knit README
 on:
   push:
-    paths: [README.Rmd]   # run when the Rmd changes
-  workflow_dispatch:      # allow manual runs
+    paths: [README.Rmd]
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -13,11 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: r-lib/actions/setup-r@v2
-      - uses: r-lib/actions/setup-pandoc@v2   # <-- this installs Pandoc
+      - uses: r-lib/actions/setup-pandoc@v2
       - name: Install R packages used in README
         run: |
-          R -q -e 'install.packages(c("rmarkdown","knitr"))'
-          R -q -e 'if (!requireNamespace("dagitty", quietly=TRUE)) install.packages("dagitty")'
+          R -q -e 'install.packages(c("rmarkdown","knitr","dagitty"))'
       - name: Render README.Rmd → README.md
         run: |
           R -q -e 'rmarkdown::render("README.Rmd",
