Updated description & documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,6 @@ Package: CMAversePlus
 Type: Package
 Title: CMAversePlus: a friendly fork of CMAverse with extra g-formula options
 Version: 0.1.0
-
 Authors@R:
     c(
       person("Baoyi", "Shi", role = "aut"),
@@ -11,28 +10,16 @@ Authors@R:
       person("Linda", "Valeri", role = "aut"),
       person("Martin", "Danka", email = "martin.danka.21@ucl.ac.uk", role = c("cre","ctb"))
     )
-
 Maintainer: Martin Danka <martin.danka.21@ucl.ac.uk>
-Description: A friendly fork of CMAverse that keeps the original workflow and API
-    and adds focused extensions for mediation analysis with the g-formula:
-    (i) additional effect measures for binary outcomes (risk ratio and risk
-    difference, alongside odds ratio); (ii) an option to compute interventional
-    effects via conditional mediator draws; and (iii) clearer effect labelling
-    that switches between natural and randomised-analogue labels when
-    intermediate confounding is specified. Functionality outside
-    'model = "gformula"' follows CMAverse.
+Description: A friendly fork of CMAverse that keeps the original workflow and API and adds focused extensions for mediation analysis with the g-formula: (i) additional effect measures for binary outcomes (risk ratio and risk difference, alongside odds ratio); (ii) an option to compute interventional effects via conditional mediator draws; and (iii) clearer effect labelling that switches between natural and randomised-analogue labels when intermediate confounding is specified. Functionality outside 'model = "gformula"' follows CMAverse.
 URL: https://github.com/martindanka/CMAversePlus, https://bs1125.github.io/CMAverse/
 BugReports: https://github.com/martindanka/CMAversePlus/issues
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports:
-    ggdag, stringr, simex, dplyr, mice, nnet, MASS, survey, survival,
-    SuppDists, boot, msm, Matrix, EValue, ggplot2, doSNOW, foreach,
-    medflex, mstate, predint, survminer
-Suggests:
-    knitr, tidyverse, kableExtra, dagitty, rmarkdown, testthat, covr
-VignetteBuilder: knitr
 Depends: R (>= 2.10)
-RoxygenNote: 7.3.1
+Imports: ggdag, stringr, simex, dplyr, mice, nnet, MASS, survey, survival, SuppDists, boot, msm, Matrix, EValue, ggplot2, doSNOW, foreach, medflex, mstate, predint, survminer
+Suggests: knitr, tidyverse, kableExtra, dagitty, rmarkdown, testthat, covr
+VignetteBuilder: knitr
+RoxygenNote: 7.3.2
 Logo: man/figures/logo2.png
